# type4me

./: .gitignore  CHANGELOG.md  CLAUDE.md  Package.swift  README.md  updates.json
Type4Me/: Type4MeApp.swift
Type4MeTests/: ModeStorageTests.swift
qwen3-asr-server/: build.sh
scripts/: build-dmg.sh  build-sensevoice-server.sh  deploy.sh  package-app.sh  test_app_bundle.sh
sensevoice-server/: sensevoice_model.py
windows/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: app_state.rs  lib.rs  main.rs  tray.rs
windows/src-tauri/src/asr/: cloud_client.rs  deepgram_client.rs  elevenlabs_client.rs  mod.rs  openai_client.rs  provider.rs  registry.rs  sensevoice_client.rs  soniox_client.rs  traits.rs  volc_client.rs
windows/src-tauri/src/audio/: capture.rs  level.rs  mod.rs
windows/src-tauri/src/auth/: cloud_auth.rs  cloud_config.rs  cloud_quota.rs  mod.rs
windows/src-tauri/src/credential/: mod.rs  storage.rs
windows/src-tauri/src/hotkey/: manager.rs  mod.rs
windows/src-tauri/src/injection/: engine.rs  mod.rs
windows/src-tauri/src/ipc/: commands.rs  events.rs
windows/src-tauri/src/llm/: claude_client.rs  cloud_client.rs  mod.rs  openai_compat.rs  traits.rs
windows/src-tauri/src/model/: manager.rs  mod.rs
windows/src-tauri/src/protocol/: deepgram_protocol.rs  mod.rs  soniox_protocol.rs  volc_protocol.rs
windows/src-tauri/src/session/: mod.rs  recognition.rs
windows/src-tauri/src/sherpa/: bridge.rs  mod.rs
windows/src-tauri/src/sound/: feedback.rs  mod.rs
(+66 files in other folders)
